# diarization

./: .gitignore  README.md  diarization.py  download.sh  evaluation.py  metadata.tsv  pyproject.toml  requirements.txt
gold/: 01-Famille_Tenzing_22-01-2022_V2.rttm  01-Passang-TashiYangzom_12-01-2022-V3.rttm  03-TashiYangzom-Passang_12-01-2022_V2.rttm  PANGLOSS-0000186.rttm  PANGLOSS-0000225.rttm  PANGLOSS-0000227.rttm  PANGLOSS-0000229.rttm  PANGLOSS-0000233.rttm  PANGLOSS-0000582.rttm  PANGLOSS-0004103.rttm  PANGLOSS-0004109.rttm  PANGLOSS-0004111.rttm  PANGLOSS-0004129.rttm  PANGLOSS-0004137.rttm  PANGLOSS-0004139.rttm  PANGLOSS-0004192.rttm  PANGLOSS-0004318.rttm  PANGLOSS-0006573.rttm  PANGLOSS-0006575.rttm  hist-09-mi.rttm  pangloss-0005674.rttm  pangloss-0005690.rttm  pangloss-0005692.rttm  pangloss-0007496.rttm  pangloss-0007500.rttm  pangloss-0007502.rttm  pangloss-0007504.rttm  pangloss-0008688.rttm  pangloss-0008689.rttm  pangloss-0008871.rttm  pangloss-0008929.rttm  pangloss-0008931.rttm  pangloss-0008933.rttm  pangloss-0008935.rttm  pangloss-0008937.rttm  pangloss-0008939.rttm  pangloss-0008941.rttm  pangloss-0008943.rttm  pangloss-0008947.rttm  pangloss-0008949.rttm  (+20 more)
src/: diarization.py
src/diarization/: complete_results.py  diarization.py  parse_xml.py
